# XMoniz

./: README
src/: CMakeLists.txt  action.cpp  actions.cpp  atoms.cpp  event.cpp  event.cpp~  icon.cpp  main.cpp  match.cpp  modifierhandler.cpp  option.cpp  output.cpp  plugin.cpp  pluginclasses.cpp  point.cpp  privateaction.h  privatematch.h  privateoption.h  privateregion.h  privatescreen.h  privatewindow.h  privatewindow.h~  rect.cpp  region.cpp  screen.cpp  screen.cpp~  session.cpp  size.cpp  string.cpp  timer.cpp  window.cpp  window.cpp~  windowgeometry.cpp  windowgeometry.cpp~
